--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "complete-intro-to-react",
+  "name": "full-react-tutorial",
   "version": "1.0.0",
-  "description": "A two day workshop on a complete intro to React",
+  "description": "React",
   "main": "index.js",
-  "author": "Brian Holt <btholt@gmail.com>",
+  "author": "Ari Adiprana <ari.adiprana@gmail.com",
   "license": "MIT",
   "scripts": {
     "lint": "standard",
