--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Ari Adiprana <ari.adiprana@gmail.com",
   "license": "MIT",
   "scripts": {
-    "lint": "standard",
+    "lint": "eslint js/**/*.js webpack.config.js",
     "build": "webpack",
+    "dev": "webpack-dev-server",
     "watch": "npm run build -- --watch"
   },
   "dependencies": {
