--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "babel-register": "6.16.0",
     "css-loader": "0.25.0",
     "enzyme": "2.0.0",
-    "enzyme-to-json": "^1.3.0",
+    "enzyme-to-json": "1.3.0",
     "eslint": "3.6.1",
     "eslint-config-standard": "6.1.0",
     "eslint-config-standard-jsx": "3.1.0",
@@ -46,7 +46,7 @@
     "eslint-plugin-promise": "2.0.1",
     "eslint-plugin-react": "6.3.0",
     "eslint-plugin-standard": "2.0.0",
-    "jest": "15.1.1",
+    "jest": "17.0.3",
     "jsdom": "9.5.0",
     "json-loader": "0.5.4",
     "react-addons-test-utils": "15.3.2",
